feat: replace russia to english

--- a/index.html
+++ b/index.html
@@ -183,7 +183,7 @@
 
 <div class="controls">
     <div class="search-box">
-        <input type="text" id="searchInput" placeholder="Поиск по имени...">
+        <input type="text" id="searchInput" placeholder="Search...">
     </div>
 
     <div class="filter-group">
@@ -209,7 +209,7 @@
     </div>
 
     <div style="margin-left: auto;">
-        <button onclick="resetAll()" style="background:#442222; color:white; border:none; padding:8px; cursor:pointer;">Сбросить статусы</button>
+        <button onclick="resetAll()" style="background:#442222; color:white; border:none; padding:8px; cursor:pointer;">Reset</button>
     </div>
 </div>
 
