feat: replace russian to english

--- a/index.html
+++ b/index.html
@@ -187,7 +187,7 @@
     </div>
 
     <div class="filter-group">
-        <span class="filter-label">Атака:</span>
+        <span class="filter-label">Atack:</span>
         <label class="checkbox-btn">
             <input type="checkbox" name="attack_type" value="Melee" checked>
             <span>Melee</span>
@@ -199,7 +199,7 @@
     </div>
 
     <div class="filter-group">
-        <span class="filter-label">Роли:</span>
+        <span class="filter-label">Roles:</span>
         <label class="checkbox-btn"><input type="checkbox" class="role-filter" value="Carry"><span>Carry</span></label>
         <label class="checkbox-btn"><input type="checkbox" class="role-filter" value="Support"><span>Support</span></label>
         <label class="checkbox-btn"><input type="checkbox" class="role-filter" value="Nuker"><span>Nuker</span></label>
