--- a/index.html
+++ b/index.html
@@ -115,11 +115,14 @@
             border: 1px solid #333;
             border-radius: 6px;
             width: 140px;
+            height: 180px;
             overflow: hidden;
             transition: all 0.2s ease;
             cursor: pointer;
             position: relative;
             box-shadow: 0 2px 5px rgba(0,0,0,0.5);
+            display: flex;
+            flex-direction: column;
         }
 
         .hero-card:hover {
@@ -149,6 +152,10 @@
         .hero-info {
             padding: 8px;
             font-size: 0.85em;
+            flex: 1;
+            display: flex;
+            flex-direction: column;
+            overflow: hidden;
         }
 
         .hero-name {
@@ -169,12 +176,20 @@
         .hero-stats {
             color: #aaa;
             line-height: 1.4;
+            flex: 1;
+            overflow: hidden;
         }
         .roles-tags {
             font-size: 0.75em;
             color: #777;
             margin-top: 4px;
             font-style: italic;
+            overflow: hidden;
+            text-overflow: ellipsis;
+            display: -webkit-box;
+            -webkit-line-clamp: 2;
+            line-clamp: 2;
+            -webkit-box-orient: vertical;
         }
 
     </style>
@@ -200,12 +215,12 @@
 
     <div class="filter-group">
         <span class="filter-label">Roles:</span>
-        <label class="checkbox-btn"><input type="checkbox" class="role-filter" value="Carry"><span>Carry</span></label>
-        <label class="checkbox-btn"><input type="checkbox" class="role-filter" value="Support"><span>Support</span></label>
-        <label class="checkbox-btn"><input type="checkbox" class="role-filter" value="Nuker"><span>Nuker</span></label>
-        <label class="checkbox-btn"><input type="checkbox" class="role-filter" value="Disabler"><span>Disabler</span></label>
-        <label class="checkbox-btn"><input type="checkbox" class="role-filter" value="Escape"><span>Escape</span></label>
-        <label class="checkbox-btn"><input type="checkbox" class="role-filter" value="Durable"><span>Durable</span></label>
+        <label class="checkbox-btn"><input type="checkbox" class="role-filter" value="Carry" checked><span>Carry</span></label>
+        <label class="checkbox-btn"><input type="checkbox" class="role-filter" value="Support" checked><span>Support</span></label>
+        <label class="checkbox-btn"><input type="checkbox" class="role-filter" value="Nuker" checked><span>Nuker</span></label>
+        <label class="checkbox-btn"><input type="checkbox" class="role-filter" value="Disabler" checked><span>Disabler</span></label>
+        <label class="checkbox-btn"><input type="checkbox" class="role-filter" value="Escape" checked><span>Escape</span></label>
+        <label class="checkbox-btn"><input type="checkbox" class="role-filter" value="Durable" checked><span>Durable</span></label>
     </div>
 
     <div style="margin-left: auto;">
@@ -319,7 +334,7 @@
                     </h3>
                     <div class="hero-stats">
                         ${hero.attack_type}
-                        <div class="roles-tags">${hero.roles.slice(0, 3).join(', ')}</div>
+                        <div class="roles-tags">${hero.roles.join(', ')}</div>
                     </div>
                 </div>
             `;
@@ -347,7 +362,9 @@
             const matchesSearch = name.includes(searchText);
             const matchesAttack = allowedAttacks.includes(attack);
             
-            const matchesRoles = selectedRoles.length === 0 || selectedRoles.some(r => roles.includes(r));
+            // If any role filters are active, hero must match at least one selected role
+            // If no role filters are active, hide all heroes
+            const matchesRoles = selectedRoles.length > 0 && selectedRoles.some(r => roles.includes(r));
 
             if (matchesSearch && matchesAttack && matchesRoles) {
                 card.classList.remove('hidden');
