--- a/index.html
+++ b/index.html
@@ -76,12 +76,15 @@
             z-index: 100;
             box-shadow: 0 4px 6px var(--shadow-light);
             display: flex;
-            flex-wrap: wrap;
+            flex-wrap: nowrap;
             gap: 15px;
             align-items: center;
             border-radius: 0 0 10px 10px;
             margin-bottom: 20px;
+            overflow-x: auto; 
+            -webkit-overflow-scrolling: touch; 
         }
+
 
         .search-box input {
             padding: 8px 12px;
@@ -100,20 +103,52 @@
 
         .filter-label { font-weight: bold; color: var(--text-gray-dark); font-size: 0.9em; text-transform: uppercase;}
 
+        .reset-btn {
+            user-select: none;
+            padding: 10px 22px; 
+            background: var(--border-dark);
+            border-radius: 6px; 
+            font-weight: bold;
+            font-size: 14px;
+            border: 1px solid var(--border-darker);
+            color: var(--text-light);
+            cursor: pointer;
+            transition: all 0.25s ease;
+            box-shadow: 0 2px 4px rgba(0,0,0,0.1);
+        }
+
+        .reset-btn:hover {
+            background: var(--border-darker);
+            color: var(--accent-red);
+            transform: translateY(-2px); 
+            box-shadow: 0 4px 8px rgba(0,0,0,0.15); 
+        }
+
+        .reset-btn:active {
+            transform: translateY(0); 
+            box-shadow: 0 2px 4px rgba(0,0,0,0.1); 
+        }
+        
         .checkbox-btn {
             cursor: pointer;
             user-select: none;
             padding: 5px 10px;
             background: var(--border-dark);
             border-radius: 4px;
-            font-size: 0.9em;
+            font-weight: bold;
             transition: 0.2s;
             border: 1px solid var(--border-darker);
         }
         .checkbox-btn:hover { background: var(--border-darker); }
         .checkbox-btn input { display: none; }
-        .checkbox-btn input:checked + span { color: var(--text-light); font-weight: bold; }
-        .checkbox-btn:has(input:checked) { background: var(--border-darkest); border-color: var(--text-gray-dark); }
+        .checkbox-btn input:checked + span { 
+            color: var(--accent-red);
+        }
+        .checkbox-btn:has(input:checked) { 
+            background: var(--border-darkest);
+            border-color: var(--accent-red);
+            box-shadow: 0 0 12px var(--glow-red-medium);
+        }
 
         /* Checkbox wrapper style */
         .checkbox-wrapper-23 {
@@ -311,7 +346,7 @@
             text-decoration: none;
             border-bottom: 1px dotted var(--text-gray-darker);
         }
-        .hero-name a:hover { color: #ffcc00; border-bottom: 1px solid #ffcc00; }
+        .hero-name a:hover { color: var(--accent-red); border-bottom: 1px solid var(--accent-red-dark); }
 
         .hero-stats {
             color: var(--text-gray);
@@ -374,7 +409,7 @@
     </div>
 
     <div style="margin-left: auto;">
-        <button onclick="resetAll()" style="background:#442222; color:white; border:none; padding:8px; cursor:pointer;">Reset</button>
+        <button onclick="resetAll()" class="reset-btn">Reset</button>
     </div>
 </div>
 
