--- a/index.html
+++ b/index.html
@@ -260,8 +260,8 @@
         /* --- Main Layout --- */
         .main-container {
             display: grid;
-            grid-template-columns: repeat(4, 1fr); /* 4 Columns for attributes */
-            gap: 20px;
+            grid-template-columns: repeat(4, 1fr); 
+            gap: 10px;
         }
 
         @media (max-width: 1200px) { .main-container { grid-template-columns: repeat(2, 1fr); } }
